<resources>
    <string name="app_name">Simplex App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="product_name">Product Name</string>
    <string name="full_name">Full Name</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="card_number">Card number</string>
    <string name="submit">Submit</string>
    <string name="feedback_message">Feedback Message</string>
    <string name="purchase">Purchase</string>
    <string name="feedback_result">Feedback Result</string>
</resources>