<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CheckoutPageActivity">

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher_round"
        android:layout_gravity="center"
        android:layout_marginTop="25dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Checkout Page"
        android:textSize="22sp"
        android:textColor="@color/colorGray"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:padding="20dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:padding="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:padding="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/country"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:padding="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:padding="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:padding="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:padding="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_number"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:padding="15dp" />

    <Button
        android:id="@+id/purchaseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purchase"
        android:textColor="@color/colorBlack"
        android:background="@color/colorGreen"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:padding="10dp" />

</LinearLayout>