<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LoginFormActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher_round"
        android:layout_gravity="center"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome and Get started"
        android:textSize="22sp"
        android:textColor="@color/colorGray"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:padding="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:padding="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:padding="15dp" />

    <Button
        android:id="@+id/signInBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/colorWhite"
        android:background="@color/colorBlue"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:padding="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="_______________________________________________________________"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/feedbackMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:hint="@string/feedback_message"
            android:textSize="15sp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="25dp"
            android:padding="25dp" />

        <TextView
            android:id="@+id/feedbackResult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:hint="@string/feedback_result"
            android:textSize="15sp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="25dp"
            android:padding="25dp" />

    </LinearLayout>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="@color/colorWhite"
        android:background="@color/colorAccent"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:padding="10dp" />

    <TextView
        android:id="@+id/textViewProgrammatically"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="This is a TextView which will change programmatically!"
        android:textSize="13sp"
        android:textColor="@color/colorRed"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp" />

</LinearLayout>